--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>BCard Liat Website</title>
-        <link rel="shortcut icon" href="vite.svg" />
+        <link rel="shortcut icon" href="vite.svg" alt="vite project icon" />
     </head>
     <body></body>
 </html>
